Updated links to Labels page

--- a/development/dev/create/editor/index.html.md.erb
+++ b/development/dev/create/editor/index.html.md.erb
@@ -395,7 +395,7 @@ The Create:Editor team OKR's are available through [GitLab](https://gitlab.com/g
 [product-development-flow]: /handbook/product-development-flow/
 [planning-breakdown]: /handbook/product-development-flow/#build-phase-1-plan
 [iteration]: /handbook/values/#iteration
-[workflow-labels]: https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#labels
+[workflow-labels]: https://docs.gitlab.com/ee/development/labels/index.html#workflow-labels
 
 [list-refinement]: https://gitlab.com/gitlab-org/gitlab/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=Backlog%20Refinement%3A%3AEditor
 [epic-tech-debt]: https://gitlab.com/groups/gitlab-org/-/epics/4274
