--- a/development/dev/manage/authentication-and-authorization/index.html.md.erb
+++ b/development/dev/manage/authentication-and-authorization/index.html.md.erb
@@ -139,7 +139,7 @@ Issues with the `workflow::verification` or `workflow::awaiting security release
 
 ##### Labels and how we use them
 
-We have [many labels](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#labels) that can be applied to an issue or merge request. Besides the issue workflow labels above, here are the minimum basic labels to apply to issues and merge requests:
+We have [many labels](https://docs.gitlab.com/ee/development/labels/index.html) that can be applied to an issue or merge request. Besides the issue workflow labels above, here are the minimum basic labels to apply to issues and merge requests:
 
 - Type (`type::feature`, `type::bug`, or `type::maintenance`)
 - Stage that owns the area (`devops::manage`)
