--- a/development/dev/plan/optimize/index.html.md.erb
+++ b/development/dev/plan/optimize/index.html.md.erb
@@ -64,7 +64,7 @@ We plan in monthly cycles in accordance with our [Product Development Timeline](
 
 ##### Community contributions
 
-Following our [community contributor docs](https://docs.gitlab.com/ee/development/contributing/issue_workflow.html#label-for-community-contributors), issues that have previously been agreed upon and labelled as `Community contribution` should be triaged to ensure they have:
+Issues that have previously been agreed upon and labelled as `Community contribution` should be [triaged](/handbook/engineering/quality/issue-triage/) to ensure they have:
 - A clear [implementation plan](/handbook/engineering/development/dev/create/editor/community-contributions/#treat-wider-community-as-primary-audience).
 - A relevant weight estimate.
 - The `Seeking community contributors` label assigned.
