Borrow Request for SETs

--- a/quality/quality-engineering/index.html.md.erb
+++ b/quality/quality-engineering/index.html.md.erb
@@ -229,6 +229,16 @@ This is the participation of Product Management, Development, UX, and Quality wh
 
 For more information, please visit our [quad planning page](quad-planning).
 
+### Borrow Request for SETs
+
+A [borrow](https://about.gitlab.com/handbook/product/product-processes/#borrow) is used when a team member is shifted from one team to another temporarily or assists other teams part-time for an agreed-upon period of time.
+Currently, we do not have an SET embedded within every product group, hence for product groups with no SET counterpart, the following would be the process to request one:
+
+1. Create a [borrow request issue](https://gitlab.com/gitlab-com/Product/-/issues/new?issuable_template=Borrow-Request-Lite) with `~SET Borrow` label.
+2. Based on the priorities, the request will be handled accordingly. 
+
+The list of all SET borrow requests can be seen [here](https://gitlab.com/gitlab-com/Product/-/issues/?label_name%5B%5D=SET%20Borrow).
+
 ### Reliable tests
 
 Reliable tests have met stricter reliability criteria than other tests in our test suite. When a failure is seen in a reliable test, it's less likely to be flakiness and more likely to be a true issue.
