Removing AK from Handbook per offboarding

--- a/development/training/index.html.md.erb
+++ b/development/training/index.html.md.erb
@@ -96,7 +96,7 @@ Submit a request to the [lxp-contributions project](https://gitlab.com/gitlab-co
 | Go | @steveazz |
 | Ruby/Rails | @tkuah |
 | Monitoring & Visualization | @andrewn |
-| GraphQL | @alexkalderimis |
+| GraphQL | @m_gill |
 | Apollo | @xanf |
 | Vue | @ntepluhina  |
 | Redis | @igorwwwwwwwwwwwwwwwwwwww |
