Add Associate Engineer roles

--- a/job-families/engineering/development/frontend/index.html.md.erb
+++ b/job-families/engineering/development/frontend/index.html.md.erb
@@ -82,9 +82,13 @@ Frontend Engineers have the following job-family performance indicators.
 
 Read more about [levels](/handbook/hiring/vacancies/#definitions) at GitLab here.
 
-### Intern, Frontend Engineer
+### Intern Frontend Engineer
 
-Intern, Frontend Engineers, while sharing the same requirements and responsibilities outlined above, typically join with less or alternate experience than typical Frontend Engineers. More information on intern hiring and the intern program can be found [here](/handbook/engineering/career-development/#internships-in-engineering).
+Intern Frontend Engineers, while sharing the same requirements and responsibilities outlined above, typically join with less or alternate experience than typical Frontend Engineers. More information on intern hiring and the intern program can be found [here](/handbook/engineering/career-development/#internships-in-engineering).
+
+### Associate Frontend Engineer
+
+Associate Frontend Engineers are expected to meet the requirements and execute the responsibilities with less professional experience.
 
 ### Intermediate Frontend Engineer
 
