Update Andrejs' Borrow Request

--- a/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -13,7 +13,7 @@ description: "Quality Engineering team for the Dev & Analytics Section"
 ## Team Handles
 
 | **GitLab Team Handle** | [`@gl-quality/dev-qe`](https://gitlab.com/gl-quality/dev-qe) |
-| **Slack Channel** | [#g_qe_dev](https://gitlab.slack.com/archives/CU90UDHC6) |
+| **Slack Channel** | [#g_qe_dev_analytics](https://gitlab.slack.com/archives/CU90UDHC6) |
 | **Slack Handle** | `@dev-qe-team`
 | **Team Boards** | [Team Board](https://gitlab.com/groups/gitlab-org/-/boards/425899) |
 | **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/team-tasks/issues/) |
@@ -34,16 +34,16 @@ Quality Engineering Manager: Ramya Authappan
 |------	|-----------	|--------------------------	|---------------------------------------------------------------------	|
 | 1    	| Create    	| [Source Code]            	| Anastasia McDonald                                                    |
 | 2    	| Create    	| [Editor]                 	| Nivetha Prabakaran                                                 	|
-| 3     | Create        | [Code Review]             | Jay McCure                                                                     |
+| 3     | Create        | [Code Review]             | Jay McCure                                                            |
 | 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                             |
-| 5     | Manage        | [Import-Integrations]    | -                                                                     |
-| 6     | Manage        | [Foundations]             | -                                                                     |
+| 5     | Manage        | [Import-Integrations]     | -                                                                     |
+| 6     | Manage        | [Foundations]             | _Andrejs Cunskis_<sup>*</sup>                                                     |
 | 7    	| Plan          | [Optimize]               	| Andrejs Cunskis                                                       |
 | 8   	| Plan      	| [Project Management]     	| Désirée Chevalier                                                    	|
 | 9     | Plan          | [Knowledge]               | -                                                                     |
 | 10   	| Plan      	| [Product Planning]       	| -                                                                     |
 
-* There are no hiring plans for SETs in FY24.  
+<sup>*</sup>Andrejs Cunskis (stable counterpart for [Optimize] product group) is currently on borrow request with [Foundations] product group till 2023-05-17.
 
 ### Quality Performance Indicators for Dev Section
 
