--- a/development/enablement/data_stores/search/index.html.md.erb
+++ b/development/enablement/data_stores/search/index.html.md.erb
@@ -28,7 +28,10 @@ The following team members are permanent members of the Global Search Group:
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /Global Search|Enablement.*Search/, direct_manager_role: 'Backend Engineering Manager, Global Search and Application Performance') %>
+| **Person**                                       | **Role** |
+| [Sarah Waldner](/company/team/#sarahwaldner)     | [Acting Product Manager](/job-families/product/product-manager/) |
+| [Ashraf Khamis](/company/team/#ashrafkhamis)     | [Senior Technical Writer](/job-families/product/technical-writer/) |
+| [Cleveland Bledsoe Jr](/company/team/#cleveland) | [Senior Support Engineer](/job-families/engineering/support-engineer/) |
 
 ## Meetings
 
