doc: Link to direction and roadmap from Gitaly page

--- a/development/enablement/systems/gitaly/index.html.md.erb
+++ b/development/enablement/systems/gitaly/index.html.md.erb
@@ -25,6 +25,12 @@ For example, Gitaly can provide a robust and efficient set of APIs to move Git r
 
 Processes fully independent of business inputs (such as repository maintenance) should be fully contained within Gitaly as they provide substantial value to anyone using the Gitaly project.
 
+### Roadmap
+
+Please see the public [product direction for Gitaly](https://about.gitlab.com/direction/gitaly/).
+
+A more [detailed internal roadmap and vision](https://internal-handbook.gitlab.io/handbook/engineering/development/enablement/systems/gitaly/roadmap/) can be found in the internal handbook. 
+
 ## Stable Counterparts
 
 The following members of other functional teams are our stable counterparts:
