--- a/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
@@ -12,15 +12,24 @@ description: "Quality Engineering team for the Ops Sections"
 
 ## Team Handles
 
-| **GitLab Team Handle** | [`@gl-quality/ops-analytics-qe`](https://gitlab.com/gl-quality/ops-qe) |
-| **Slack Channel** | [#g_qe_ops_analytics](https://gitlab.slack.com/archives/CUGNRS97V) |
+| **GitLab Team Handle** | [`@gl-quality/ops-qe`](https://gitlab.com/gl-quality/ops-qe) |
+| **Slack Channel** | [#g_qe_ops](https://gitlab.slack.com/archives/CUGNRS97V) |
 | **Slack Handle** | `@ops-qe-team` |
 | **Team Boards** | [Team Board](https://gitlab.com/groups/gitlab-org/-/boards/978348) |
 | **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/quality-engineering/team-tasks/-/issues)
 
 ## Team members
 
-<%= direct_team(manager_role: 'Manager, Quality Engineering, Ops & Analytics') %>Engineers in this team are embedded in the [Ops section].
+Quality Engineering Manager: Joanna Shih
+
+| Stage     	| Group                    	| SET Counterpart       |
+|-----------	|--------------------------	|----------------------	|
+| Verify    	| Pipeline Authoring        | Tiffany Rea    |
+| Verify    	| Pipeline Execution        | Richard Chong    |
+| Runner        | Runner                    | Zeff Morgan            |
+| Package    	| Package Registry          | Sofia Vistas         |
+| Package    	| Container Registry        | Sofia Vistas          |
+
 
 ## OKRs
 
