Changed references for OKRs from Ally to GitLab

--- a/quality/engineering-analytics/index.html.md.erb
+++ b/quality/engineering-analytics/index.html.md.erb
@@ -48,19 +48,19 @@ In addition to the areas of focus and core competencies listed above, the Engine
 
 ## OKRs
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates as the quarter progresses. Starting February 2023, Engineering Analytics uses GitLab to track progress towards quarterly OKRs.
 
-### Current quarter
+### Current Quarter
 
-<iframe src="https://app.ally.io/public/oSQLCGxCQxMUIHd" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
+* [Engineering Analytics OKRs for FY24 Q1](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Engineering%20Analytics&milestone_title=FY24-Q1)
 
-### Previous quarter
+### Previous Quarter
 
-<iframe src="https://app.ally.io/public/yLyUqcbEcwwzgGH" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
+* For FY23 Q4, OKRs were not tracked in GitLab. Starting in FY24 Q2, this section will contain links to OKRs from previous quarters in GitLab.
 
 ## Team Structure
 
-This new team will be a new function under the Quality Department operating as a team of Engineering Analysts, led by a leader of Engineering Analytics, who in turn reports to the leader of the Quality Department.
+This team is a function under the Quality Department operating as a team of Engineering Analysts, led by a leader of Engineering Analytics, who in turn reports to the leader of the Quality Department.
 
 ```mermaid
 graph TD
@@ -115,7 +115,7 @@ Department Heads in Engineering are generally responsible for their overall PI p
 Our main role as engineering analysts is to support department heads or DRI in creating or updating their metrics so that they can use them in the key meetings. 
 Your stable counterpart may also ask to delegate a set of metrics from their department to you so in that case you would also be the DRI for those metrics & assume the responsibilities listed above in DRI section
 
-## How we Work
+## How We Work
 
 While this team operates as a single team reporting to one manager, we emphasize on ensuring the prioritization and needs of Engineering Leaders via stable counterparts.
 
