Point to onboarding template as SSOT

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -479,34 +479,7 @@ In addition, Technical Writers should:
 While the Technical Writer is onboarding, they will be assigned to
 shadow groups and then start contributing as trainees. Veteran Technical Writers will coach them through the process.
 
-### Group shadowing
-
-For the first release cycle that begins after the new member starts at GitLab, they will shadow (read) their buddy's work in their most active
-stage group, plus one other stage group/writer (decided with the
-Technical Writing Manager). Veteran Technical Writers will
-proactively share relevant issues, merge requests, and communications
-with their shadows by using a `#tw-onboarding-<groupname>`
-Slack channel, creating it if it doesn't already exist.
-
-### Group trainees
-
-For the second release cycle that begins after the new member's start, unless the shadowing phase is extended,
-they will act as a trainee on one or more groups as assigned by the Manager.
-The intent is to take on the group as its Technical Writer for the
-next release. The veteran Technical Writer who is assigned to that Group
-will assign substantial parts of the work to the new member,
-which accounts to roughly half of the groups's reviews of MRs with docs, UI text,
-and release post content; a small but substantial documentation
-authoring project; and a few minor doc improvement projects/fixes.
-
-### Group coaching
-
-For the third release cycle, the onboarding Technical Writer assumes the
-full role of Technical Writer for their assigned group, except that
-they will not yet have [merge rights](#merge-rights). The former TW assigned to the group is now the coach,
-who will review all their work (including reviews they perform of other authors)
-before merging it or approving it for another maintainer to merge.
-They may share the burden of these reviews with other Technical Writers.
+For more information about onboarding phases and tasks, see the [Technical Writer onboarding template](https://gitlab.com/gitlab-org/technical-writing/-/blob/main/.gitlab/issue_templates/tw_onboarding.md).
 
 ## Standups
 
