Interviewing at GitLab - Infrastructure page link

--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -168,6 +168,10 @@ Infrastructure mStaff is a loose denomination for the group of people who report
 
 The weekly mStaff brings together Infrastructure's management team for a weekly sync to prepare for the week and address issues that require attention. The meeting is organized by the VP of Infrastructure.
 
+## Interviewing
+
+The Infrastructure department hires for a number of different technical specialisms and positions across its teams. This [Infrastructure Interviewing Guide](https://about.gitlab.com/handbook/hiring/interviewing/infrastructure-interview/) offers more detail on some of our regular openings, interview process and other useful information related to applying to jobs with us. More information on our current openings can be found on the [careers page](https://about.gitlab.com/jobs/). 
+
 <%= partial "handbook/engineering/infrastructure/_common_links.html" %>
 
 [library]: https://gitlab.com/gitlab-com/gl-infra/readiness/-/tree/master/library
