Change Infra GC assignments

--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -109,22 +109,22 @@ Meetings may have multiple topics. For each topic there should be one meeting. T
 |**Topics**|**Meeting**|**Participants**|**Cadence**|
 |Incident Review and followup|[Incident Review](https://docs.google.com/document/d/1Llm9tXHC2dNt_eercRUUXlUyWmOVw00wmXWQQbWvv2c/edit#) (internal only)|All Engineering|Tues|
 |Infrastructure Performance Indicator Review|[Infrastructure Key Meeting](https://docs.google.com/document/d/1YYWwdu2dw-ooXXQGW3PddA0TOvwoSvVHmNN3BNoLE2U/edit) (internal only)|Eng VP Staff, Finance & Exec leadership|Monthly|
-|What's Happening in Infrastructure|[Infrastructure Group Conversation](https://docs.google.com/document/d/1zELoftrommhRdnEOAocE6jea6w7KngUDjTUQBlMCNAU/edit?usp=sharing) (internal only)|All Company|Monthly|
+|What's Happening in Infrastructure|[Infrastructure Group Conversation](https://docs.google.com/document/d/1zELoftrommhRdnEOAocE6jea6w7KngUDjTUQBlMCNAU/edit?usp=sharing) (internal only)|All Company|Quarterly|
 |Infrastructure Leadership Discussion|[mStaff Weekly](https://docs.google.com/document/d/10x4cEIoU5yBZAF0zXEWL47hPLxC0Ue635rkxHL6iB5w/edit?usp=sharing) (internal only)|Infra VP Directs & all Managers|Tues|
 |Practical exercises to improve team capabilities|[Firedrills](https://docs.google.com/a/gitlab.com/document/d/1mppLPq4beUawcvde_N3GvxM--vSdFriYbdRdTR4zrGY/edit?usp=drive_web) (internal only)|All Infra|Weds|
 |Discussions for Oncall Handover & Newsletter|[Oncall Handover](https://gitlab.com/gitlab-com/gl-infra/infrastructure/-/issues?label_name%5B%5D=Reliability-Team-Newsletter)|Ending & Starting EOC| Tues|
 
-##### Infrastructure Key Review
+#### Infrastructure Key Review
 [Key Review meetings](https://about.gitlab.com/handbook/key-review/) provide the Infrastructure leadership the opportunity to inform the executive team of our [performance indicator](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/) progress, results on OKRs, and updates on any [Cross-functional Key Initiatives](https://about.gitlab.com/company/team/structure/working-groups/#top-cross-functional-initiatives) which we are leading.
 
 Infrastructure Key Review meetings are facilitated and led by currently responsible VP, Director of Infrastructure Platform, and Director of Reliability Engineering.
 
-##### Infrastructure Group Conversation
+#### Infrastructure Group Conversation
 [Group Conversation meetings](https://about.gitlab.com/handbook/group-conversations/) take the information from the Key Review (plus any additional topics) and present this to an audience that is all of GitLab, and for Infrastructure, is a Public livestream.
 
 Coordination of Infrastructure Group Conversation materials and facilitation of the discussion is a rotating role among the managers within Infrastructure.
 
-FY23 Infrastructure Group Conversation DRI [Schedule](https://docs.google.com/spreadsheets/d/1SHJaGBwKcOCmmKfL0eyaTWNuTqPbQDQFbipAPM5SEfw/edit#gid=479046138)(internal only)
+Infrastructure Group Conversation DRI [Schedule](https://docs.google.com/spreadsheets/d/1SHJaGBwKcOCmmKfL0eyaTWNuTqPbQDQFbipAPM5SEfw/edit#gid=479046138)(internal only)
 
 Quick checklist for the host (time order):
 
@@ -135,17 +135,18 @@ Quick checklist for the host (time order):
 5. 20 minutes before - open up Zoom and check for any updates.
 
 |**GC Date**|**DRI**|
-|Feb 1, 2023| Anthony F |
-|Apr 26, 2023| Dave S |
-|June 8, 2023| Stephen D |
-|July 25, 2023| Kenn W |
-|August 29, 2023| Oriol L |
-|October 12, 2023| Anna Liisa M |
-|November 16, 2023| Rachel N |
-|TBD| Liam M |
-|TBD| Michele B |
+|TBD| Platform EM |
+|TBD| Reliability EM |
+|TBD| Quality EM |
+|TBD| Engineering Productivity EM |
+|TBD| Engineering Analytics EM|
+|TBD| Platform EM |
+|TBD| Reliability EM |
+|TBD| Quality EM |
+|TBD| Engineering Productivity EM |
+|TBD| Engineering Analytics EM|
 
-##### Reliability discussions and firedrills
+#### Reliability discussions and firedrills
 
 Reliability discussions and firedrills is a **purely technical meeting** for Infrastructure ICs to discuss technical topics. The agenda is driven by:
 1. Issues that are proposing Firedrill exercises
@@ -158,11 +159,11 @@ While open discussions are welcome, it is strongly recommended that written desi
 
 During discussions, it is ok to point shortcomings for a given design. This is one way in which we expand our angle of vision and learn. In general, however, **make it a point to provide alternatives**.
 
-##### Staff/Newsletter Meetings
+#### Staff/Newsletter Meetings
 
 We have weekly infrastructure oncall handover and staff meetings. These meetings are organized by Infrastructure Managers that occur as a time for SREs to have weekly handover notes for Oncall and other announcements for the team.  We run these meetings from the [Team Newsletter issues](https://gitlab.com/gitlab-com/gl-infra/infrastructure/-/issues?label_name%5B%5D=Reliability-Team-Newsletter).
 
-##### mStaff
+#### mStaff
 
 Infrastructure mStaff is a loose denomination for the group of people who report directly to the active VP. This is a group composed of both managers and individual contributors, and they are responsible for the overall direction of Infrastructure and the achievement of our goals:
 
