Update VSA Start Date description

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -270,7 +270,7 @@ It is recommended to review the executive briefing with your champion, key stake
 
 The Account Leader (AE) is responsible for maintaining the Salesforce opportunity level VSA Tracking Fields outline below:
 
-- **VSA Start Date** - Date of the VSA kickoff call with the prospect/customer.  
+- **VSA Start Date** - Date of the VSA kickoff call with the prospect/customer.(This is the first meeting with the prospect/customer, after they've committed to do a VSA, to discuss [planning of the VSA workshop](#planning-meeting-with-customer).)  
 - **VSA End Date** - The date the VSA readout is presented to the prospect/customer or the date of the last meeting with the prospect if the VSA status is set to "Stalled."
 - **VSA Status** - The status of the VSA where
   - **Planning** - Internal qualification and planning is occuring.  VSA start date should not be set when this status is set.
