handbook update partner SA troops descriptions

--- a/customer-success/solutions-architects/processes/activity-capture/activity-desc/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/activity-capture/activity-desc/index.html.md.erb
@@ -91,25 +91,25 @@ Select these [SA] Activity types when capturing activities by the Strategic Fiel
 
 ### Description for Alliance/Channel SA Activity
 
-Select these [SA] Activity types when capturing activities by the Alliance/Channel team but other activity types for Enterprise can also be used.
+Select these [SA] Activity types when capturing activities by the Alliance/Channel team but other activity types for Enterprise can also be used.  There is an implied priority with higher value activities listed highest / first to lowest / last.
 
-- **Partner Enablement** [Alliances][Channel] - Calls, meetings, workshops, webinars, including prep work to enable partners on GitLab product and pre-sales.
+- **Partner Opportunity** [Alliances][Channel] - Sales opportunity # aligned work alongside field SA on specific sales opportunities with a partner involvement. This includes being an overlay SME on partner technologies and its joint value proposition with GitLab and/or helping a channel/services partner become successful with joint customers.
 
-- **Partner Services Attach** [Channel] - Develop partner services catalog and/or SoW for specific services engagements.
+- **Partner Assisted Demand Gen** [Alliances][Channel] - Delivering or developing customer facing webinars, workshops, roadshows and similar activities in collaboration with a partner, focussed on demand generation / lead generation.  
 
-- **Partner Opportunity** [Alliances][Channel] - Work alongside field SA on specific sales opportunities with a partner involvement. This includes being an overlay SME on partner technologies and its joint value proposition with GitLab and/or helping a channel/services partner become successful with joint customers.
+- **Partner VSA Enablement** [Channel] - Activities involving enablement of partners to pitch or execute Value Stream Assessment and similar presales value selling motions.  
 
-- **Partner Technical Evangelism** [Alliances][Channel] - Partner marketing events and evangelism, including conferences, meetups, webinars, open-invite bootcamps, blogs and customer success stories.
+- **Partner Technical Evangelism** [Alliances][Channel] - Delivering or developing partner facing (not customer facing) events and evangelism, including partner internal conferences, meetups, webinars, open-invite bootcamps, blogs and customer success stories.
+
+- **Internal Enablement and SME Assistance** [Alliances][Channel] - GitLab facing internal calls, meetings, webinars for partner promotion and GitLab field team assistance.  
+
+- **Partner Solutioning** [Alliances][Channel] - Solution architecture work for defining and developing partner solutions and integration with GitLab.  For a work done on a specific sales opportunity, consider "Partner Opportunity."
+
+- **Partner Services Attach** [Channel] - Develop partner services catalog and/or SoW for future services engagements.
+
+- **Partner Enablement** [Alliances][Channel] - Partner facing calls, meetings, workshops, webinars, including prep work to enable partner Champions on GitLab product and pre-sales.
 
 - **Partner Cadence calls** [Alliances][Channel] - Cadence calls with partners for partnership building and pre sales activities on customer opportunities and account strategy.  
-
-- **Partner Solutioning** [Alliances][Channel] - Solution architecture work for defining and developing partner solutions and integration with GitLab.
-
-- **Internal Enablement and SME Assistance** [Alliances][Channel] - Calls, meetings, webinars for internal field SA enablement and assistance.  
-
-- **Partner Assisted Demand Gen** [Alliances][Channel] - Webinars, workshops, roadshows and similar activities in collaboration with a partner, focussed on demand generation.  
-
-- **Partner VSA Enablement** [Channel] - Activities involving enablement of partners to pitch or execute Value Stream Assessment.  
 
 ### Description for Value Stream Assessment
 
