--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -1,10 +1,9 @@
 ---
 layout: handbook-page-toc
-title: Orchestrate Group
-description: "The Orchestrate group is responsible for the Orchestrate stage of the DevOps lifecycle."
+title: Environments Group
+description: "The Environments group is responsible for the Environments in the Deploy stage of the DevOps lifecycle."
 ---
 
-## THE NAME OF THE STAGE/GROUP IS TEMPORARY, WE NEEDED SOMETHING TO KICKSTART THE CONVERSATION
 
 ## On this page
 {:.no_toc .hidden-md .hidden-lg}
@@ -39,7 +38,7 @@ overall vision.
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /[,&] Orchestrate/, manager_slug: 'nicolo-maria-mezzopera') %>
+<%= stable_counterparts(role_regexp: /[,&] Environments/, manager_slug: 'nicolo-maria-mezzopera') %>
 
 ## Common Links
 
@@ -53,7 +52,7 @@ Some dedicated Slack channels:
 * Terraform backend: [`f_terraform_backend`](https://gitlab.slack.com/archives/f_terraform_backend)
 * [Terraform provider](https://gitlab.com/gitlab-org/terraform-provider-gitlab): [`terraform-provider`](https://gitlab.slack.com/archives/terraform-provider)
 * Auto DevOps: [`f_autodevops`](https://gitlab.slack.com/archives/f_autodevops)
-* Environment Detail Page: [`#f_environment_details_page`](https://gitlab.slack.com/archives/C04N1P3B3UL)
+* Environments Detail Page: [`#f_environment_details_page`](https://gitlab.slack.com/archives/C04N1P3B3UL)
 
 ## Insights
 
@@ -63,7 +62,7 @@ Some dedicated Slack channels:
 
 ### Acronyms 
 
-- Engineers: All the Engineers of the Orchestrate team
+- Engineers: All the Engineers of the Environments group
 - Engineering: Engineers and the Engineering Manager
 - EM: Engineering Manager
 - PM: Product Manager
@@ -74,9 +73,9 @@ Some dedicated Slack channels:
 
 ### Issue refinement
 
-Every week the [refinement bot](https://gitlab.com/gitlab-org/configure/refinement/) assigns a team member as the refinement DRI, who is responsible for refining **4 issues from the top of the `~"workflow::refinement"` list** (the list is prioritised top to bottom) in the [Milestone Board](#milestone-board) **and another issue of their choice** with a ping to the EM and/or PM explaining the reasoning.
+Every week the [refinement bot](https://gitlab.com/gitlab-org/ci-cd/deploy-stage/environments-group/refinement) assigns a team member as the refinement DRI, who is responsible for refining **4 issues from the top of the `~"workflow::refinement"` list** (the list is prioritised top to bottom) in the [Milestone Board](#milestone-board) **and another issue of their choice** with a ping to the EM and/or PM explaining the reasoning.
 
-The refinement process is described in the [issue template](https://gitlab.com/gitlab-org/configure/refinement/-/blob/main/templates/default.erb).
+The refinement process is described in the [issue template](https://gitlab.com/gitlab-org/ci-cd/deploy-stage/environments-group/refinement/-/blob/main/templates/default.erb).
 
 ### Technical Discovery meetings
 
@@ -106,11 +105,11 @@ Not all POCs will be successful, and that is OK! Some avenues of research may no
 
 #### GitLab Terraform Provider
 
-The [GitLab Terraform Provider](/handbook/engineering/projects/#terraform-provider-gitlab) is managed by the Orchestrate team.
+The [GitLab Terraform Provider](/handbook/engineering/projects/#terraform-provider-gitlab) is managed by the Environments group.
 
 ### Milestone Board
 
-The issues scheduled for a milestone can be tracked at [Milestone Board](https://gitlab.com/groups/gitlab-org/-/boards/4176401?label_name[]=devops%3A%3AOrchestrate).
+The issues scheduled for a milestone can be tracked at [Milestone Board](https://gitlab.com/groups/gitlab-org/-/boards/4176401).
 
 This board contains all the necessary columns to track the workflow of the team, in particular:
 
@@ -124,7 +123,7 @@ All the columns are prioritised top to bottom
 
 Our goal is to move towards a continuous delivery model so the team completes tasks regularly, and keeps working off of a prioritized backlog of issues. We default to team members self-scheduling their work:
 
-- Team members self-assign issues from the [Milestone Board](https://gitlab.com/groups/gitlab-org/-/boards/4176401?label_name[]=devops%3A%3AOrchestrate&?not[label_name][]=configure%3A%3Aparked) that are in the `workflow:ready for development` column and has the current milestone.
+- Team members self-assign issues from the [Milestone Board](https://gitlab.com/groups/gitlab-org/-/boards/4176401?label_name[]=group%3A%3Aenvironments&?not[label_name][]=configure%3A%3Aparked) that are in the `workflow:ready for development` column and has the current milestone.
 - Once a team member has completed their assigned issues, they are expected to go to the group issue boards and assign themselves to the next unassigned `workflow:ready for development` issue.
 - The issues on the board are in priority order based on importance (the higher they are on the list, the higher the priority). This order is set by the product manager.
 - If all issues are assigned for the milestone, team members are expected to identify the next available issue to work on based on the team's work prioritization (see below).
@@ -142,14 +141,14 @@ Team members should use their best judgment to determine whether to assign the f
 
 - If there is known domain expert for the area of code, prefer assigning the initial review to them.
 - Does the MR require a lot of context to understand what it is doing? Will it take a reviewer outside the team a long time to ramp up on that context?
-- Does the MR require a lot of dev environment setup that team members outside the Orchestrate stage are likely to not have?
+- Does the MR require a lot of dev environments setup that team members outside the Environments group are likely to not have?
 - Is the MR part of a larger effort for which a specific team member already has all the context?
 
 ## Quality Processes
 
 Maintaining a high standard of quality is a critical factor to delivering winning products.
 
-Within the Orchestrate team we use the following processes and best practices to ensure high quality.
+Within the Environments group we use the following processes and best practices to ensure high quality.
 
 1. We ensure each MR is accompanied with meaningful unit tests and integration tests.
 1. For each major feature we develop and maintain End to End tests that run nightly and confirm no regressions have been introduced to critical paths.
@@ -158,7 +157,7 @@ Within the Orchestrate team we use the following processes and best practices to
 
 #### End to End Testing
 
-The Orchestrate team uses [GitLab QA](https://gitlab.com/gitlab-org/gitlab-qa) for End-to-End testing. We have [guidelines](https://about.gitlab.com/handbook/engineering/development/ops/Orchestrate/quality) for how our team is leveraging these tests.
+The Environments group uses [GitLab QA](https://gitlab.com/gitlab-org/gitlab-qa) for End-to-End testing. We have [guidelines](https://about.gitlab.com/handbook/engineering/development/ops/deploy/environments/quality) for how our team is leveraging these tests.
 
 ## Error Budget
 
@@ -229,7 +228,7 @@ More specifically, the following points are important:
 ### How to contribute to Auto DevOps
 
 Read our [specific GDK](https://gitlab.com/gitlab-org/gitlab-development-kit/-/tree/main/doc/howto/kubernetes)
-instructions as well as our [handbook entry](/handbook/engineering/development/ops/Orchestrate/autodevops/)
+instructions as well as our [handbook entry](/handbook/engineering/development/ops/deploy/environments/autodevops/)
 on what existing testing does and how to develop features for Auto DevOps.
 
 ### Useful links for contributing to Auto DevOps
