--- a/development/ops/package/index.html.md.erb
+++ b/development/ops/package/index.html.md.erb
@@ -459,7 +459,7 @@ A merge request with the following properties:
 A Package group member will adopt the community contribution with the following tasks:
 
 * Confirm the community merge request (MR) is properly [triaged](/handbook/engineering/quality/merge-request-triage/). This step includes important labeling for [work type classification](/handbook/engineering/metrics/#work-type-classification), stage and group and the `Community Contribution` label.
-* If the MR addresses an open issue, ensure that the issue is still valid and the description is up to date. Consider closing the issue and the MR if it is outdated, following the [closing policy for issues and merge requests](https://docs.gitlab.com/ee/development/contributing/#closing-policy-for-issues-and-merge-requests).
+* If the MR addresses an open issue, ensure that the issue is still valid and the description is up to date. Consider [closing the issue](https://about.gitlab.com/handbook/engineering/quality/issue-triage/#lean-toward-closing) and [closing the MR](https://docs.gitlab.com/ee/development/contributing/merge_request_workflow.html#merge-request-ownership) if it is outdated.
 * Evaluate the review effort and assign it using `package-review-weight::x` labels.
 * Consider reaching out to MR coaches or using the reviewer roulette to leverage support and provide contributors with a smoother and quicker experience.
 * Assign themselves to the issue. This helps to identify a DRI for that issue in the milestone planning.
@@ -486,7 +486,7 @@ Other points to consider for the Package group member:
 * Contributing to features managed by the Package group can mean having to use the Enterprise Edition (EE) version of GitLab. This [guideline](/handbook/marketing/community-relations/code-contributor-program/#for-contributors-to-the-gitlab-enterprise-edition-ee) will help with this aspect.
 * Make sure that the merge request size and complexity stay at a reasonable level to ensure a [smooth review process](https://docs.gitlab.com/ee/development/contributing/merge_request_workflow.html#contribution-acceptance-criteria).
 * If the merge request grows to an unexpected size or tries to solve too many issues at once, consider suggesting to the community contributor to split it into smaller ones and use a [feature flag](https://docs.gitlab.com/ee/development/feature_flags/) if necessary.
-* If a merge request gets stalled for a long time, consider suggesting that you will finish the merge request. Check the proper section in [Merge Request Coach responsabilities](https://about.gitlab.com/job-families/expert/merge-request-coach/) and the [closing policy for merge requests](https://docs.gitlab.com/ee/development/contributing/#closing-policy-for-issues-and-merge-requests).
+* If a merge request gets stalled for a long time, consider suggesting that you will finish the merge request. Check the proper section in [Merge Request Coach responsibilities](https://about.gitlab.com/job-families/expert/merge-request-coach/#finishing-merge-requests).
   * Do not forget to credit the community contributor.
 * If some aspects of the merge request become a high priority task (for example, a bug fix) and the work from the community contributor is less active or stalled, consider suggesting that you will extract this part to a small merge request to get it implemented as quickly as possible.
   * The other aspects with less priority can still be worked out by the community contributor.
