--- a/development/enablement/data_stores/index.html.md.erb
+++ b/development/enablement/data_stores/index.html.md.erb
@@ -18,4 +18,4 @@ Develop the tooling and frameworks to support scaling GitLab's usage of data sto
 * [Application Performance](/handbook/engineering/development/enablement/data_stores/application_performance/)
 * [Database](/handbook/engineering/development/enablement/data_stores/database/)
 * [Global Search](/handbook/engineering/development/enablement/data_stores/search/)
-* [Pods (formerly Sharding)](/handbook/engineering/development/enablement/data_stores/pods/)
+* [Tenant Scale (formerly Pods)](/handbook/engineering/development/enablement/data_stores/tenant_scale/)
