--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -268,6 +268,8 @@ It is recommended to review the executive briefing with your champion, key stake
 
 ## Salesforce Tracking
 
+[Three minute video overview](https://youtu.be/k_pJJuk-qTE) covering the fields and process described below.
+
 The Account Leader (AE) is responsible for maintaining the Salesforce opportunity level VSA Tracking Fields outline below:
 
 - **VSA Start Date** - Date of the VSA kickoff call with the prospect/customer.(This is the first meeting with the prospect/customer, after they've committed to do a VSA, to discuss [planning of the VSA workshop](#planning-meeting-with-customer).)  
